# vde_attendance

./: README.md
backend/: .env  .gitignore  Dockerfile  Dockerfile.test  README.md  docker-compose.yml  init.sql  pyproject.toml  pytest.ini  requirements-test.txt  traefik.yml
backend/.github/workflows/: tests.yml
backend/app/: config.py  main.py
backend/app/auth/: dependencies.py  model.py  route.py  schema.py  service.py
backend/app/auth/models/: role.py  user.py
backend/app/database/: database.py
backend/app/models/: models.py
backend/app/routes/: attendance.py  classes.py  reports.py  stage.py  students.py
backend/app/schemas/: schemas.py
backend/app/services/: attendance_service.py  class_service.py  student_service.py
backend/scripts/: run_tests.sh
backend/tests/: conftest.py
backend/tests/test_models/: test_student_models.py  test_user_models.py
backend/tests/test_routes/: test_auth_routes.py  test_student_routes.py
backend/tests/test_services/: test_auth_service.py  test_student_service.py
backend/tests/test_utils/: test_validators.py
