[project]
name = "school-attendance"
version = "0.1.0"
description = "Système de gestion des présences scolaire"
authors = [
    {name = "Votre Nom", email = "votre@email.com"},
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"