[project]
name = "school-attendance"
version = "0.1.0"
description = "Système de gestion des présences scolaire"
authors = [
    {name = "Votre Nom", email = "votre@email.com"},
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "psycopg2-binary>=2.9.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.0.0",
    "pydantic-settings",
    "python-jose[cryptography]>=3.3.0",
    "passlib[argon2]>=1.7.4",
    "python-dotenv>=1.0.0",
    "email-validator>=2.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.24.0",
    "freezegun>=1.2.0",
    "Faker>=18.0.0",
    "factory-boy>=3.2.0",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
